--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,6 @@
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  height: 10000px;
 }
 .slick-active {
   outline: none;
@@ -260,7 +259,7 @@ body {
   margin: 30px auto;
   width: 90px;
   height: 4px;
-  background: red;
+  background: #ff0048;
 }
 .projects__example {
   display: flex;
@@ -270,7 +269,7 @@ body {
   width: 30%;
 }
 .project:hover {
-  background: red;
+  background: #ff0048;
 }
 .project:hover .project__name,
 .project:hover .project__subtitle {
@@ -306,9 +305,9 @@ body {
 }
 .project__name {
   display: inline-block;
-  color: red;
+  color: #ff0048;
   font-weight: 600;
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid #ff0048;
   font-size: 0.925em;
   margin: 20px auto 20px 15px;
 }
@@ -316,5 +315,121 @@ body {
   font-size: 0.875em;
   color: #999999;
   margin: auto auto 20px 15px;
+}
+.projects__btn {
+  width: 15%;
+  height: 60px;
+  line-height: 54px;
+  background: transparent;
+  color: #ff0048;
+  font-size: 0.875em;
+  font-weight: 700;
+  border: 3px solid #ff0048;
+  margin: 30px auto 45px auto;
+}
+.projects__btn:hover {
+  background: #ff0048;
+  color: #fff;
+}
+.about-us {
+  margin-top: 60px;
+}
+.about-us__detail {
+  width: 45%;
+}
+.about-us__content {
+  display: flex;
+  justify-content: space-between;
+}
+.about-us__title {
+  font-size: 1.75em;
+  font-weight: 700;
+}
+.about-us__text {
+  margin: 25px auto 50px auto;
+  line-height: 1.4em;
+  font-weight: 400;
+  font-size: 0.9em;
+}
+.link {
+  color: #ff0048;
+}
+.link:hover {
+  color: #999999;
+}
+.footer__sections {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__section {
+  width: 23%;
+}
+.job-type {
+  position: relative;
+}
+.job-type__title {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-bottom: 35px;
+}
+.job-type__links {
+  list-style-type: none;
+  line-height: 2.5em;
+  font-weight: 300;
+  font-size: 0.75em;
+  padding: 0;
+}
+.job-type__link {
+  position: relative;
+}
+.job-type__link:before,
+.job-type__link:after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  width: 10px;
+  height: 3px;
+  background: #ff0048;
+}
+.job-type__link:before {
+  transform: rotate(45deg) translateY(-50%);
+  bottom: 50%;
+}
+.job-type__link:after {
+  transform: rotate(-45deg) translateY(50%);
+  top: 50%;
+}
+.link_decoration_arrow {
+  margin-left: 30px;
+}
+.company__title {
+  font-size: 0.8em;
+  font-weight: 700;
+}
+.company__address {
+  margin: 25px auto;
+  font-size: 0.9em;
+  line-height: 1.5em;
+}
+.company__rules {
+  font-size: 0.8em;
+  line-height: 1.5em;
+}
+.company__icons {
+  margin-top: 20px;
+}
+.company__icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+.icon_social_vk {
+  background: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2222%22%20height%3D%2213%22%20viewBox%3D%220%200%2022%2013%22%3E%3Cpath%20fill%3D%22%23ef3643%22%20d%3D%22M21.1%2010.5c-.7-.8-1.4-1.5-2.2-2.3-.7-.7-.7-1.1-.2-1.8.6-.8%201.2-1.7%201.8-2.5.5-.8%201.1-1.6%201.4-2.5.2-.6%200-.9-.6-1h-3.8c-.4%200-.7.2-.8.6-.2.5-.4%201.1-.7%201.6-.6%201.2-1.2%202.3-2%203.3-.2.2-.4.5-.7.4-.4-.2-.5-.8-.5-1.1V1c-.1-.6-.2-.9-.8-1H8.4c-.5%200-.7.2-1%20.5-.1.2-.2.3.1.4.6.1.9.5%201%201.2.1%201%20.1%202%20.1%203%200%20.3-.1.6-.2.9-.1.3-.4.4-.8.2-.3-.3-.6-.6-.8-1C5.9%204%205.2%202.6%204.7%201.1%204.5.7%204.2.5%203.8.5H.7c-.7%200-.8.3-.6.9C1.2%204%202.5%206.6%204.2%209c.9%201.2%201.8%202.3%203.1%203%201.4.9%203%201.1%204.6%201%20.8%200%201-.2%201-1%200-.5.1-1.1.3-1.6.3-.5.6-.6%201.1-.3.2.1.4.3.6.5.4.5.8%201%201.3%201.5.6.6%201.2.9%202%20.9h3.2c.5%200%20.8-.7.5-1.3-.2-.4-.5-.8-.8-1.2z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E') no-repeat center center;
+  background-size: 100%;
+}
+.icon_social_instagram {
+  background: url('data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2220.1%22%20height%3D%2220.1%22%20viewBox%3D%220%200%2020.1%2020.1%22%3E%3Cpath%20fill%3D%22%23ef3643%22%20d%3D%22M6.7%2010.1c0-1.8%201.5-3.3%203.3-3.3s3.3%201.5%203.3%203.3-1.5%203.3-3.3%203.3-3.3-1.5-3.3-3.3m-1.8%200c0%202.8%202.3%205.1%205.1%205.1s5.1-2.3%205.1-5.1S12.8%205%2010%205s-5.1%202.3-5.1%205.1m9.2-5.3c0%20.7.5%201.2%201.2%201.2s1.2-.5%201.2-1.2-.5-1.2-1.2-1.2c-.6%200-1.2.5-1.2%201.2M6%2018.2c-1%200-1.5-.2-1.9-.3-.5-.2-.8-.4-1.1-.8-.4-.3-.6-.7-.7-1.1-.2-.4-.4-.9-.4-1.9%200-1.1-.1-1.4-.1-4%200-2.7%200-3%20.1-4%200-1%20.2-1.5.3-1.9.2-.5.4-.8.8-1.1.3-.3.7-.6%201.1-.7C4.5%202.2%205%202%206%202c1.1%200%201.4-.1%204-.1%202.7%200%203%200%204%20.1%201%200%201.5.2%201.9.3.5.2.8.4%201.1.7.4.3.6.7.7%201.1.2.5.4%201%20.4%202%200%201.1.1%201.4.1%204%200%202.7%200%203-.1%204%200%201-.2%201.5-.3%201.9-.2.5-.4.8-.7%201.1-.4.4-.7.6-1.1.7s-.9.3-1.9.3c-1.1%200-1.4.1-4%20.1-2.8.1-3.1.1-4.1%200M5.9.2C4.8.2%204.1.4%203.5.7c-.7.2-1.3.5-1.8%201.1-.6.5-.9%201.1-1.2%201.7C.3%204.2.1%204.9.1%206%200%207%200%207.4%200%2010.1s0%203.1.1%204.1c0%201.1.2%201.8.5%202.4.3.7.6%201.2%201.2%201.8.6.6%201.1.9%201.8%201.2.6.2%201.4.4%202.4.5h4s3.1%200%204.1-.1c1.1%200%201.8-.2%202.4-.5.7-.3%201.2-.6%201.8-1.2.6-.6.9-1.1%201.2-1.8.2-.6.4-1.4.5-2.4%200-1.1.1-1.4.1-4.1s0-3.1-.1-4.1c0-1.1-.2-1.8-.5-2.4-.3-.7-.6-1.2-1.2-1.8S17.2.8%2016.5.5c-.6-.2-1.4-.4-2.4-.5-1%20.1-1.4.1-4.1.1S6.9.1%205.9.2%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E') no-repeat center center;
+  background-size: 100%;
 }
 /*# sourceMappingURL=index.css.map */
